# BEAN

./: .gitignore  CMakeLists.txt  README.md
Analysis/AbsCor/: CMakeLists.txt  version  version.txt
Analysis/AbsCor/AbsCor/: AbsCor.h
Analysis/AbsCor/AbsCor/CVS/: Entries  Repository
Analysis/AbsCor/CVS/: Entries  Repository
Analysis/AbsCor/dat/CVS/: Entries  Repository
Analysis/AbsCor/src/: AbsCor.cxx
Analysis/AbsCor/src/CVS/: Entries  Repository
Analysis/CVS/: Entries  Repository
Analysis/DatabaseSvc/: CMakeLists.txt  version
Analysis/DatabaseSvc/CVS/: Entries  Repository
Analysis/DatabaseSvc/DatabaseSvc/CVS/: Entries  Repository
Analysis/DatabaseSvc/dat/: db.timestamp
Analysis/DatabaseSvc/share/: dbupdate.py  get_sqlite3.sh
Analysis/DatabaseSvc/share/CVS/: Entries  Repository
Analysis/DatabaseSvc/src/CVS/: Entries  Repository
Analysis/EventTag/: CMakeLists.txt  readme
Analysis/Identifier/: CMakeLists.txt
Analysis/MagneticField/: CMakeLists.txt
Analysis/MagneticField/CVS/: Entries  Repository
Analysis/MagneticField/MagneticField/: ConnectionDB.h  MagneticFieldSvc.h
Analysis/MagneticField/MagneticField/CVS/: Entries  Repository
Analysis/MagneticField/dat/CVS/: Entries  Repository
Analysis/MagneticField/src/: ConnectionDB.cxx  MagneticFieldSvc.cxx
Analysis/MagneticField/src/CVS/: Entries  Repository
Analysis/ParticleID/: CMakeLists.txt  ChangeLog
Analysis/ParticleID/CVS/: Entries  Repository
Analysis/ParticleID/ParticleID/CVS/: Entries  Repository
Analysis/ParticleID/share/CVS/: Entries  Repository
Analysis/ParticleID/share/JPsi/CVS/: Entries  Repository
Analysis/ParticleID/share/JPsi/kaon/CVS/: Entries  Repository
Analysis/ParticleID/share/JPsi/pion/CVS/: Entries  Repository
Analysis/ParticleID/share/JPsi/proton/CVS/: Entries  Repository
Analysis/ParticleID/share/Psip/CVS/: Repository
Analysis/ParticleID/share/Psip/kaon/CVS/: Entries  Repository
Analysis/ParticleID/share/Psip/pion/CVS/: Entries  Repository
Analysis/ParticleID/share/Psip/proton/CVS/: Entries  Repository
Analysis/ParticleID/share/Psipp/CVS/: Repository
Analysis/ParticleID/share/Psipp/kaon/CVS/: Entries  Repository
Analysis/ParticleID/share/Psipp/pion/CVS/: Entries  Repository
Analysis/ParticleID/share/Psipp/proton/CVS/: Entries  Repository
Analysis/ParticleID/share/TofCorrPID/CVS/: Entries  Repository
Analysis/ParticleID/share/TofCorrPID/jpsi2009/CVS/: Entries  Repository
Analysis/ParticleID/share/TofCorrPID/jpsi2009/data/CVS/: Entries  Repository
Analysis/ParticleID/share/TofCorrPID/jpsi2009/mc/CVS/: Repository
Analysis/ParticleID/share/TofCorrPID/jpsi2012/data/: parameter_offset_proton.txt
Analysis/ParticleID/share/TofCorrPID/jpsi2012/mc/: parameter_offset_proton.txt
Analysis/ParticleID/share/TofEndcap/CVS/: Entries  Repository
Analysis/ParticleID/share/pidparadedx/CVS/: Entries  Repository
Analysis/ParticleID/share/pidparatof/CVS/: Entries  Repository
Analysis/ParticleID/src/: DedxPID.cxx  TofCorrPID.cxx
Analysis/ParticleID/src/CVS/: Entries  Repository
Analysis/RscanDQ/: CMakeLists.txt
Analysis/TrackCorrection/: CMakeLists.txt  readme
Analysis/TrackCorrection/TrackCorrection/: TrackCorrection.h
Analysis/TrackCorrection/src/: TrackCorrection.cxx  TrackCorrection.cxx.orig
Analysis/VertexFit/: CMakeLists.txt  ChangeLog
Analysis/VertexFit/CVS/: Entries  Repository
Analysis/VertexFit/VertexFit/: VertexDbSvc.h
Analysis/VertexFit/VertexFit/CVS/: Entries  Repository
Analysis/VertexFit/src/: VertexDbSvc.cxx  WTrackParameter.cxx
Analysis/VertexFit/src/CVS/: Entries  Repository
BeanCore/: BEmcTrack.cxx  BEmcTrack.h  BExtTrack.cxx  BExtTrack.h  BMdcKalTrack.cxx  BMdcKalTrack.h  BMdcTrack.cxx  BMdcTrack.h  BTofTrack.h  Bean.cxx  Bean.h  CMakeLists.txt  DstEvtRecTracks.cxx  DstEvtRecTracks.h  DstFormat.cxx  DstFormat.h  MasterInfoHack.cxx  MasterInfoHack.h  ReadDst.cxx  ReadDst.h  TMergeableMap.cxx  TMergeableMap.h  TofHitStatus.cxx  TofHitStatus.h  main.cxx  unix_cp.cxx  unix_cp.h
BeanCore/CVS/: Entries  Repository
BeanCore/win_getopt/: getopt.c  getopt.h
BeanCore/win_getopt/CVS/: Entries  Repository
BeanUser/: Bhabha.cxx  CMakeLists.txt  DLLDefines.h  DelClonedTrks.cxx  DoubleDTag.cxx  EntryList.cxx  Eta_TwoPi.cxx  Etaetagamma.cxx  JobInfo.cxx  MagField.cxx  PipPimPi0Eta.cxx  PsipHelixParCor.cxx  PsipJpsiGammaEta.cxx  PsipJpsiPhiEta.cxx  PsipMuMuGamma.cxx  PsipPiPiKK.cxx  RadBhabha.cxx  Rhopi.cxx  SelectJpsiX.cxx  SelectKKgg.cxx  SelectOmegaEta.cxx  SelectOmegapi0.cxx  Semileptonic.cxx  TestAbsCor.cxx  TestDb.cxx  TestEventTag.cxx  TestPID.cxx  User1.cxx  UserTest.cxx
BeanUser/CVS/: Entries  Repository
BeanUser/PROOF-INF/CVS/: Repository
CVS/: Entries
RootEventData_6.5.2/CVS/: Entries  Repository
RootEventData_6.5.3/CVS/: Repository
RootEventData_6.5.5/CVS/: Repository
RootEventData_6.6.1/CVS/: Entries  Repository
RootEventData_6.6.3/CVS/: Entries  Repository
RootEventData_6.6.3/RootEventData/: TEvtNavigator.h
cmake/: FindCLHEP.cmake  FindROOT.cmake  MacRpathPatch.cmake  RootEventData.cmake  setup.sh.cmake
cmake/CVS/: Entries  Repository
doc/: .gitignore  Makefile_clhep  RootEventDataVer.h.cmake  UsefulLinks.txt
doc/CVS/: Entries  Repository
scripts/: GetAbsCorFiles.py  GetVtx.py  add_new_RootEventData.sh  get_sqlite3.sh  test_run
workdir/: .gitignore  job_info  run_phieta  run_psip  run_test
workdir/PsipJpsiPhiEta/: .gitignore  00_readme.txt  ClonedTrks.cc  Lmedian.cc  MrecFit.cc  MrecFitSB.cc  ReWeightEtaEff.h  ReWeightTrkPid_11.h  RewEtaEff.hpp  RewTrkPiK.hpp  a4c_v709.h  bkg_mc.cc  br_aver.py  bw_test.cc  chi2_Pr.cc  cuts.h  eff_mc.cc  eta_eff.cc  eta_eff_pr.cc  eta_eff_sel.cc  kkgg_dataMC.cc  mass_2D.cc  mass_eta.cc  mass_kk.cc  mass_kk_fit.cc  masses.h  mrec_4C.cc  norm.h  num_prints.cc  p10a4c.h  p10a4cMC.h  pipi_dataMC.cc  plot_scan.cc  trk_eff_fit.cc  trk_eff_sel.cc  trk_eff_spl.py  trk_eff_wts.cc
workdir/phieta/: .gitignore  00_readme.txt  a4c_prod3.h  chi2_Pr.cc  cmpr_cs.cc  cmpr_cs_chi2.cc  cross_section.cc  cuts.h  eff_MC.cc  get_table.py  jpsi_incl.cc  (+14 more)
(+165 files in other folders)
